--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!--start wrapper-->
+    <div class="wrapper">
+        <!--START HEADER-->
+        <header class="title">
+            <h1>Create Your Burger</h1>
+        </header>
+        <!--END HEADER-->
+
+    </div>
     
     <script type="text/javascript" src="js/script.js"></script>
 </body>
