fine header inizio main

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body>
     <!--start wrapper-->
     <div class="wrapper">
-        <!--START HEADER-->
+        <!--HEADER-->
         <header class="title">
             <h1>Create Your Burger</h1>
         </header>
         <!--END HEADER-->
 
+        <!--MAIN-->
+        <!--END MAIN-->
     </div>
     
     <script type="text/javascript" src="js/script.js"></script>
