--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
         <!--END HEADER-->
 
         <!--MAIN-->
+        <main>
+            <!--name burger section-->
+            <div>
+                <label for="name_burger">Name Your Burger</label>
+                <input id="name_burger" type="text" placeholder="Name Your Burger"> 
+            </div>
+            <!--end name burger section-->
+
+            <div>
+                <h3>Ingredients</h3>
+                <div class="container"></div>
+            </div>
+        </main>
         <!--END MAIN-->
     </div>
     
