--- a/index.html
+++ b/index.html
@@ -26,10 +26,50 @@
             </div>
             <!--end name burger section-->
 
+            <!--ingredients section-->
             <div>
                 <h3>Ingredients</h3>
-                <div class="container"></div>
+                <div class="container">
+                    <!--cheese-->
+                    <div class="ingredient">
+                        <img src="img /cheese.svg" alt="">
+                        <label for="cheese">Cheese</label>
+                        <input id="cheese" type="checkbox"> 
+                    </div>
+                    <!--tomato-->
+                    <div class="ingredient">
+                        <img src="img /tomato.svg" alt="">
+                        <label for="tomato">Tomato</label>
+                        <input id="tomato" type="checkbox"> 
+                    </div>
+                    <!--egg-->
+                    <div class="ingredient">
+                        <img src="img /fried-egg.svg" alt="">
+                        <label for="egg">Egg</label>
+                        <input id="egg" type="checkbox"> 
+                    </div>
+                    <!--lattuce-->
+                    <div class="ingredient">
+                        <img src="img /lettuce.svg" alt="">
+                        <label for="lattuce">Lattuce</label>
+                        <input id="lattuce" type="checkbox"> 
+                    </div>
+                    <!--mustard-->
+                    <div class="ingredient">
+                        <img src="img /mustard.svg" alt="">
+                        <label for="mustard">Mustard</label>
+                        <input id="mustard" type="checkbox"> 
+                    </div>
+                    <!--ketchup-->
+                    <div class="ingredient">
+                        <img src="img /ketchup.svg" alt="">
+                        <label for="ketchup">Ketchup</label>
+                        <input id="ketchup" type="checkbox"> 
+                    </div>
+                </div>
+                <!--end ingredients section-->
             </div>
+            <!--end ingredients section-->
         </main>
         <!--END MAIN-->
     </div>
