--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <main>
             <!--name burger section-->
             <div>
-                <label for="name_burger">Name Your Burger</label>
+                <!--<label for="name_burger">Name Your Burger</label>-->
                 <input id="name_burger" type="text" placeholder="Name Your Burger"> 
             </div>
             <!--end name burger section-->
@@ -70,8 +70,24 @@
                 <!--end ingredients section-->
             </div>
             <!--end ingredients section-->
+
+            <!--coupon section-->
+            <div class="coupon">
+                <label for="discount_coupon">Discount Coupon</label>
+                <input id="discount_coupon" type="text" placeholder="12354ABCDEF">
+            </div>
+            <!--end coupon section-->
+
+            <!--button-->
+            <div class="calculate">
+                <button>calculate</button>
+            </div>
+            <!--end button-->
         </main>
         <!--END MAIN-->
+
+        <!--FOOTER-->
+        <!--END FOOTER-->
     </div>
     
     <script type="text/javascript" src="js/script.js"></script>
