--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!--MAIN-->
         <main>
             <!--name burger section-->
-            <div>
+            <div class="burger">
                 <!--<label for="name_burger">Name Your Burger</label>-->
                 <input id="name_burger" type="text" placeholder="Name Your Burger"> 
             </div>
@@ -87,6 +87,10 @@
         <!--END MAIN-->
 
         <!--FOOTER-->
+        <footer class="price_section">
+            <div>Your Price</div>
+            <div id="price"></div>
+        </footer>
         <!--END FOOTER-->
     </div>
     
