--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
             <!--button-->
             <div class="calculate">
-                <button>calculate</button>
+                <button id="calculate_button">calculate</button>
             </div>
             <!--end button-->
         </main>
