--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 
         <!--FOOTER-->
         <footer class="price_section">
-            <div>Your Price</div>
+            <div>
+                <h4>Your Price</h4>
+            </div>
             <div id="price"></div>
         </footer>
         <!--END FOOTER-->
